--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "@openzeppelin/contracts": "^4.5.0",
-    "axios": "^0.26.0",
-    "ethers": "^5.5.4",
-    "hardhat": "^2.9.0",
-    "ipfs-http-client": "^56.0.1",
+    "@openzeppelin/contracts": "^4.7.0",
+    "axios": "^0.26.1",
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.9",
+    "hardhat": "^2.9.9",
+    "ipfs-http-client": "^56.0.3",
     "next": "12.1.0",
     "next-themes": "^0.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
-    "web3modal": "^1.9.5"
+    "web3modal": "^1.9.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
@@ -33,6 +35,6 @@
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.7",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.1.5"
   }
 }
